Revert "luci-theme-material: fix overview spacing"
This reverts commit e1d12e0b92e467be7bc00be370afd9af03ad1157.

--- a/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
+++ b/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
@@ -1371,9 +1371,8 @@ footer {
 	font-size: 12px;
 	color: var(--text-color-medium);
 	/* the redundant properties below work around a csstidy bug */
-	/* Match footer with header padding left and right so they are aligned (header uses 1180px, but footer was using 940px) */ 
-	padding-left: calc((100% - 1180px) / 2);
-	padding-right: calc((100% - 1180px) / 2);
+	padding-left: calc((100% - 940px) / 2);
+	padding-right: calc((100% - 940px) / 2);
 }
 
 footer a {
@@ -2624,30 +2623,3 @@ div.cbi-value var.cbi-tooltip-container,
 #view div[style] > svg line[style] {
 	stroke: var(--text-color-highest)!important;
 }
-
-/* === STATUS OVERVIEW: HIDE/SHOW BUTTONS === */
-
-/* Change mouse icon from text cursor to pointer */
-body[data-page='admin-status-overview'] .cbi-title .label {
-  cursor: pointer;
-}
-
-/* Smaller buttons on larger screens */
-@media screen and (min-width : 481px) {
-  body[data-page='admin-status-overview'] .cbi-title .label {
-    line-height: 1em;
-    margin: 0.7em 0;
-  }
-}
-
-/* Slightly fade "show" button */
-body[data-page='admin-status-overview'] .cbi-title .label.notice {
-  opacity: var(--disabled-opacity);
-}
-
-/* Remove fade when hovered */
-body[data-page='admin-status-overview'] .cbi-title .label.notice:hover {
-  opacity: initial;
-}
-
-/* === END STATUS OVERVIEW: HIDE/SHOW BUTTONS === */
